--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "bugs": {
     "url": "https://github.com/vajahath/feather-cache-indexeddb/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "idb-keyval": "^3.1.0"
+  },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/jest": "^23.3.1",
@@ -42,6 +44,7 @@
     "@types/yosay": "^0.0.29",
     "del": "^3.0.0",
     "fancy-log": "^1.3.2",
+    "feather-cache": "^1.0.4",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-prettier-plugin": "^1.3.0",
@@ -50,8 +53,8 @@
     "jest": "^23.2.0",
     "prettier": "^1.13.7",
     "run-sequence": "^2.2.1",
+    "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "ts-node":"^7.0.1",
     "typescript": "^3.0.0"
   }
 }
