--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "idb-keyval": "^3.1.0"
   },
+  "peerDependencies": {
+    "feather-cache": "^1.x.x"
+  },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/jest": "^23.3.1",
